Fixed logo jumping around bug on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -440,28 +440,6 @@ input:focus {
 	}
 }
 
-@media (max-width: 480px){
-	#main-nav.fixed {
-		width:90%;
-	}
-
-	.VRLogo {
-        height: 15.4% !important;
-    	width: 98% !important;
-	}
-}
-
-@media screen and (max-width: 700px) {
-	#main-nav.fixed {
-		width:90%;
-	}
-
-	.VRLogo {
-		height: 15% !important;
-    	width: 71% !important;
-	}
-}
-
 @media (max-width: 768px){
 	#main-nav.fixed {
 		width:90%;
@@ -1493,7 +1471,29 @@ footer .contact a {
     background-image: url('../images/logoCombined.png');
     background-size: contain;
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: 0 0;
+}
+
+@media screen and (max-width: 700px) {
+	#main-nav.fixed {
+		width:90%;
+	}
+
+	.VRLogo {
+		height: 10em;
+    	width: 64%;
+	}
+}
+
+@media (max-width: 480px){
+	#main-nav.fixed {
+		width:90%;
+	}
+
+	.VRLogo {
+        height: 6.4em;
+    	width: 80%;
+	}
 }
 
 @media (max-width: 1024px) and (min-width: 768px) {
